<resources>
    <string name="app_name" translatable="false">Cherry</string>
    <string name="title_activity_music" translatable="false">Music Home</string>
    <string name="action_settings">Settings</string>
    <string name="remote_services" translatable="false">Remote Services</string>

    <string-array name="tabs_title">
        <item>Tracks</item>
        <item>Categories</item>
        <item>Albums</item>
        <item>Artists</item>
        <item>Playlists</item>
        <item>Downloads</item>
        <item>My Playlists</item>
    </string-array>

    <string name="unknown" translatable="false">Unknow</string>
    <string name="create">Create</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_playlist" translatable="false">Select playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share" translatable="false">Share</string>
    <string name="start" translatable="false">Start</string>
    <string name="end" translatable="false">End</string>
    <string name="remove_from_playlist" translatable="false">Remove from playlist</string>
    <string name="rename" translatable="false">Rename</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="library">Library</string>
    <string name="save" translatable="false">Save</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Close</string>
    <string name="bass">Bass</string>
    <string name="string_3d" translatable="false">3d</string>
    <string name="player_stop_at" translatable="false">Player stop at</string>
    <string name="cancel_sleep_timer">Sleep timer had been cancel</string>
    <string name="file_deleted_result_msg" translatable="false">has been deleted</string>
    <string name="song_had_been_saved" translatable="false">has been saved to</string>

    <string name="copyright" translatable="false">A product by lrandomdev.com</string>
    <string name="do_not_have_any_song_to_play" translatable="false">Do not have any song to play</string>
    <string name="slidedown" translatable="false">Swipe to slidedown</string>
    <string name="sleep_timer" translatable="false">Sleep Timer</string>
    <string name="about">About</string>
    <string name="equalizer" translatable="false">Equalizer</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="share_app" translatable="false">Share this app</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="select_track">Select track</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="downloading_file">Downloading File</string>
    <string name="download_complete">Download Complete</string>
    <string name="favorites">Favorites</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="user_interface">User Interface</string>
    <string name="enable_push_notification">Enable Push Notification</string>
    <string name="struction">Struction</string>
    <string name="choose_language">Choose Languages</string>
    <string name="view_track_in_grid">View Track In Grid</string>
    <string name="swipe_tab_effects">Swipe Tab Effects</string>
    <string name="choose_effects">Choose Effects</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="base_theme">Base Theme</string>
    <string name="do_you_want_vote_our_app" translatable="false">Do you want vote our app</string>

    <!--Update 28 Aug 2018-->
    <string name="finding_lyrics">Finding lyrics</string>
    <string name="not_found_lyrics">Not found any lyrics</string>
    <string name="loading">Loading...</string>

    <string name="home">Home</string>
    <string name="mv">MV</string>
    <string name="my_music">My Music </string>
    <string name="top_albums">Lastest Albums </string>
    <string name="top_artists">Lastest Artists </string>
    <string name="new_releases">New Releases </string>
    <string name="features_playlists">Lastest Playlists </string>
    <string name="view_more">View More </string>
    <string name="category">Category </string>
    <string name="popular_song">Popular Song</string>
    <string name="albums">Albums</string>
    <string name="title_activity_category">ActivityCategory</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="type_to_search">Search Track, Album, Artist, Playlist</string>
    <string name="same_artist">Same Artist</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="has_been_add_to_queue">has been add to queue</string>
    <string name="contain">contain</string>
    <string name="general">General</string>
</resources>
