<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/htab_maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:fitsSystemWindows="false"
        app:layout_behavior="lrandomdev.com.online.mp3player.FixAppBarLayoutBehavior">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/htab_collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitleColor"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleTextAppearance="@style/expandToolbarLayoutTitleColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/download">


            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/bg"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="@android:color/black"
                android:fitsSystemWindows="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgSmallThumb"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgSmallThumb"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/loading"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_circle"
                    android:text="@string/artists"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:id="@+id/btnTag"
                    />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_play_no_circle"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvPopularSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/popular_song"
                android:textColor="?attr/titleTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcPopularTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPopularSong"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:padding="5dp" />

            <TextView
                android:id="@+id/tvTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rcPopularTracks"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/albums"
                android:textColor="?attr/titleTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTracks"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:padding="5dp" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


