<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_white"
            android:background="#19FFFFFF"
            />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:hint="@string/type_to_search"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorWhite"
            android:background="#19FFFFFF"
            />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/tracks"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcTracks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTracks"></android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btnMoreTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/view_more"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcTracks"
                android:visibility="gone"
                android:textSize="14sp"
                android:textAllCaps="false"
                />


            <TextView
                android:id="@+id/tvAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/albums"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMoreTrack" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcAlbums"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlbums"></android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btnMoreAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/view_more"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcAlbums"
                android:visibility="gone"
                android:textSize="14sp"
                android:textAllCaps="false"
                />

            <TextView
                android:id="@+id/tvArtists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/artists"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMoreAlbum" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcArtists"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvArtists">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btnMoreArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/view_more"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcArtists"
                android:visibility="gone"
                android:textSize="14sp"
                android:textAllCaps="false"
                />

            <TextView
                android:id="@+id/tvPlaylists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/playlists"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMoreArtist" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcPlaylists"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPlaylists">

            </android.support.v7.widget.RecyclerView>


            <Button
                android:id="@+id/btnMorePlaylists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/view_more"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcPlaylists"
                android:visibility="gone"
                android:textSize="14sp"
                android:textAllCaps="false"
                />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</LinearLayout>